@@ -2,17 +2,11 @@
 module TaxCloud
   module Errors
 
-    # This error is raised when a configuration option is missing.
+    # Raised when a configuration option is missing.
     class MissingConfigOption < TaxCloudError
-
+      
       # Create the new error.
-      #
-      # @example Create the new error.
-      #   MissingConfigOption.new(:name, [ :option ])
-      #
       # @param [ Symbol, String ] name The attempted config option name.
-      #
-      # @since 3.0.0
       def initialize(name)
         super(
           compose_message(
@@ -21,6 +15,7 @@ module TaxCloud
           )
         )
       end
+      
     end
   end
 end
