@@ -8,20 +8,17 @@ module TaxCloud
     # translating the messages.
     class TaxCloudError < StandardError
 
+      attr_reader :problem, :summary, :resolution
+
       BASE_KEY = "taxcloud.errors.messages"
 
       # Compose the message.
-      #
-      # @example Create the message
-      #   error.compose_message
-      #
-      # @return [ String ] The composed message.
-      #
-      # @since 1.0.0
+      # @param [ String ] key Lookup key in the translation table.
+      # @param [ Hash ] attributes The objects to pass to create the message.
       def compose_message(key, attributes = {})
-        @problem = problem(key, attributes)
-        @summary = summary(key, attributes)
-        @resolution = resolution(key, attributes)
+        @problem = create_problem(key, attributes)
+        @summary = create_summary(key, attributes)
+        @resolution = create_resolution(key, attributes)
 
         "\nProblem:\n  #{@problem}"+
         "\nSummary:\n  #{@summary}"+
@@ -41,13 +38,13 @@ module TaxCloud
       #
       # @return [ String ] A localized error message string.
       def translate(key, options)
-        ::I18n.translate("#{BASE_KEY}.#{key}", { locale: :en }.merge(options))
+        ::I18n.translate("#{BASE_KEY}.#{key}", { locale: :en }.merge(options)).strip
       end
 
       # Create the problem.
       #
       # @example Create the problem.
-      #   error.problem("error", {})
+      #   error.create_problem("error", {})
       #
       # @param [ String, Symbol ] key The error key.
       # @param [ Hash ] attributes The attributes to interpolate.
@@ -55,14 +52,14 @@ module TaxCloud
       # @return [ String ] The problem.
       #
       # @since 1.0.0
-      def problem(key, attributes)
+      def create_problem(key, attributes)
         translate("#{key}.message", attributes)
       end
 
       # Create the summary.
       #
       # @example Create the summary.
-      #   error.summary("error", {})
+      #   error.create_summary("error", {})
       #
       # @param [ String, Symbol ] key The error key.
       # @param [ Hash ] attributes The attributes to interpolate.
@@ -70,14 +67,14 @@ module TaxCloud
       # @return [ String ] The summary.
       #
       # @since 1.0.0
-      def summary(key, attributes)
+      def create_summary(key, attributes)
         translate("#{key}.summary", attributes)
       end
 
       # Create the resolution.
       #
       # @example Create the resolution.
-      #   error.resolution("error", {})
+      #   error.create_resolution("error", {})
       #
       # @param [ String, Symbol ] key The error key.
       # @param [ Hash ] attributes The attributes to interpolate.
@@ -85,7 +82,7 @@ module TaxCloud
       # @return [ String ] The resolution.
       #
       # @since 1.0.0
-      def resolution(key, attributes)
+      def create_resolution(key, attributes)
         translate("#{key}.resolution", attributes)
       end
     end
