@@ -1,2 +1,3 @@
 require 'tax_cloud/responses/base'
 require 'tax_cloud/responses/ping'
+require 'tax_cloud/responses/verify_address'
