@@ -22,17 +22,25 @@ class TestAddress < TestSetup
 
   def test_verify_good_address
     VCR.use_cassette('verify good address') do
-      verify = @address.verify
-      assert_equal '0', verify[:verify_address_response][:verify_address_result][:err_number]
+      verified = @address.verify
+      assert_instance_of TaxCloud::Address, verified
+      assert_equal '888 6TH AVE', verified.address1
+      assert_equal nil, verified.address2
+      assert_equal 'NEW YORK', verified.city
+      assert_equal 'NY', verified.state
+      assert_equal '10001', verified.zip5
+      assert_equal '3502', verified.zip4
     end
   end
 
   def test_verify_bad_address
-    VCR.use_cassette('verify bad address') do
-      bad_address = TaxCloud::Address.new :address1 => '10001 Test Street', :city => 'New York', :state => 'New York', :zip5 => '99999'
-      verify = bad_address.verify
-      assert_not_equal '0', verify[:verify_address_response][:verify_address_result][:err_number]
+    e = assert_raise TaxCloud::Errors::ApiError do
+      VCR.use_cassette('verify bad address') do
+        bad_address = TaxCloud::Address.new :address1 => '10001 Test Street', :city => 'New York', :state => 'New York', :zip5 => '99999'
+        verify = bad_address.verify
+      end
     end
+    assert_equal e.problem, "Invalid Zip Code."
   end
 
 end
